更新 JFXProgressBar 和 JFXSpinner